--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-three/fiber": "^9.4.0",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
+    "@vercel/blob": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
