--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.49.3",
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.2.0",
     "three": "^0.160.1",
     "zod": "^3.22.4"
